WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117099
Fix bug in active page tracking that lead to plugins hanging during destruction
https://bugs.webkit.org/show_bug.cgi?id=117099
Summary
Fix bug in active page tracking that lead to plugins hanging during destruction
Oliver Hunt
Reported
2013-05-31 17:06:53 PDT
Fix bug in active page tracking that lead to plugins hanging during destruction
Attachments
Patch
(4.51 KB, patch)
2013-05-31 17:08 PDT
,
Oliver Hunt
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2013-05-31 17:08:00 PDT
Created
attachment 203474
[details]
Patch
Oliver Hunt
Comment 2
2013-05-31 18:39:04 PDT
Committed
r151060
: <
http://trac.webkit.org/changeset/151060
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug