Fix bug in active page tracking that lead to plugins hanging during destruction https://bugs.webkit.org/show_bug.cgi?id=117099

Reviewed by Anders Carlsson.

NPRuntimeObjectMap no longer keeps its own reference to the
throttler, and no longer reports activity during destruction.

* WebProcess/Plugins/Netscape/NPRuntimeObjectMap.cpp:
(WebKit::NPRuntimeObjectMap::NPRuntimeObjectMap):
(WebKit::NPRuntimeObjectMap::evaluate):
* WebProcess/Plugins/Netscape/NPRuntimeObjectMap.h:
* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::PluginView):

Canonical link: https://commits.webkit.org/135366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151060 268f45cc-cd09-0410-ab3c-d52691b4dbfc