Source/WebKit2/WebProcess/Plugins/Netscape/NPRuntimeObjectMap.h
@@ -45,10 +45,6 @@ namespace JSC {
     class JSValue;
 }
 
-namespace WebCore {
-    class PageThrottler;
-}
-
 namespace WebKit {
 
 class JSNPObject;
@@ -58,7 +54,7 @@ class PluginView;
 // A per plug-in map of NPObjects that wrap JavaScript objects.
 class NPRuntimeObjectMap : private JSC::WeakHandleOwner {
 public:
-    explicit NPRuntimeObjectMap(PluginView*, WebCore::PageThrottler*);
+    explicit NPRuntimeObjectMap(PluginView*);
 
     class PluginProtector {
     public:
@@ -99,7 +95,6 @@ private:
     void invalidateQueuedObjects();
 
     PluginView* m_pluginView;
-    RefPtr<WebCore::PageThrottler> m_pageThrottler;
     HashMap<JSC::JSObject*, NPJSObject*> m_npJSObjects;
     HashMap<NPObject*, JSC::Weak<JSNPObject>> m_jsNPObjects;
     Vector<NPObject*> m_npObjectsToFinalize;
